--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <title>TicTacToe</title>
       <link href = "style.css" rel = "stylesheet" type = "text/css">
+      <script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
    </head>
    <body>
       <div id = "wrapper"></div>
