--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -5,6 +5,11 @@
       <title>TicTacToe</title>
       <link href = "style.css" rel = "stylesheet" type = "text/css">
       <script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
+      <script language="javascript">
+      VK.init({
+        apiId: 5087365
+      });
+    </script>
    </head>
    <body>
       <div id = "wrapper"></div>
