--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -30,5 +30,6 @@
          </div>        
       </div>
       <!-- <script src = "mw.js"></script> -->
+      <button class="custom-btn btn-3"><span>Пригласить друзей</span></button>
    </body>
 </html>
