--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -9,6 +9,8 @@
       VK.init({
         apiId: 5087365
       });
+         
+      VK.callMethod("showInviteBox");
     </script>
    </head>
    <body>
