--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -30,6 +30,6 @@
          </div>        
       </div>
       <!-- <script src = "mw.js"></script> -->
-      <button class="custom-btn btn-3" onclick='VK.callMethod("showInviteBox")'><span>Пригласить друзей</span></button>
+      <button class="custom-btn btn-3"><span onclick='VK.callMethod("showInviteBox")'>Пригласить друзей</span></button>
    </body>
 </html>
